[package]
name = "sui-minter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = "1.0.160"
bcs = "0.1.5"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
hex = "0.4.3"
serde_json = "1.0.96"
blake2 = "0.10.6"
bs58 = "0.4.0"
ed25519-dalek = "1.0.1"
base64 = "0.21.0"
reqwest = "0.11.17"


